tests/ui/asm/statement-global-asm-error.stderr
error: the `in` operand cannot be used with `global_asm!`
  --> $DIR/statement-global-asm-error.rs:7:23
   |
LL |     global_asm!("{}", in(x));
   |                       ^^ the `in` operand is not meaningful for global-scoped inline assembly, remove it

error: non-expression macro in expression position: global_asm
  --> $DIR/statement-global-asm-error.rs:11:13
   |
LL |     let y = global_asm!("");
   |             ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

